--- a/sw/uiconfig/swriter/ui/numparapage.ui
+++ b/sw/uiconfig/swriter/ui/numparapage.ui
@@ -17,7 +17,6 @@
   <object class="GtkBox" id="NumParaPage">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="hexpand">True</property>
     <property name="border_width">6</property>
     <property name="orientation">vertical</property>
     <property name="spacing">12</property>
@@ -25,28 +24,23 @@
       <object class="GtkFrame" id="frameFL_OUTLINE_START">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="hexpand">True</property>
         <property name="label_xalign">0</property>
         <property name="shadow_type">none</property>
         <child>
           <object class="GtkAlignment" id="alignment1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="hexpand">True</property>
             <property name="top_padding">6</property>
             <property name="left_padding">12</property>
             <child>
               <object class="GtkBox" id="boxOUTLINE">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="hexpand">True</property>
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkLabel" id="labelFT_OUTLINE_LEVEL">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="halign">start</property>
-                    <property name="hexpand">True</property>
                     <property name="label" translatable="yes" context="numparapage|labelFT_OUTLINE_LEVEL">Outline level:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">comboLB_OUTLINE_LEVEL</property>
@@ -62,7 +56,6 @@
                   <object class="GtkComboBoxText" id="comboLB_OUTLINE_LEVEL">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="hexpand">True</property>
                     <items>
                       <item translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">Text Body</item>
                       <item translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">Level 1</item>
@@ -108,28 +101,24 @@
       <object class="GtkFrame" id="frameFL_NEW_START">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="hexpand">True</property>
         <property name="label_xalign">0</property>
         <property name="shadow_type">none</property>
         <child>
           <object class="GtkAlignment" id="alignment2">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="hexpand">True</property>
             <property name="top_padding">6</property>
             <property name="left_padding">12</property>
             <child>
               <object class="GtkBox" id="box2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="hexpand">True</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkBox" id="boxNUMBER_STYLE">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="hexpand">True</property>
                     <property name="spacing">12</property>
                     <child>
                       <object class="GtkLabel" id="labelFT_NUMBER_STYLE">
@@ -149,31 +138,42 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkComboBoxText" id="comboLB_NUMBER_STYLE">
+                      <object class="GtkBox" id="boxSubNumber_Style">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="hexpand">True</property>
-                        <items>
-                          <item translatable="yes" context="numparapage|comboLB_NUMBER_STYLE">None</item>
-                        </items>
+                        <property name="spacing">12</property>
+                        <child>
+                          <object class="GtkComboBoxText" id="comboLB_NUMBER_STYLE">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <items>
+                              <item translatable="yes" context="numparapage|comboLB_NUMBER_STYLE">None</item>
+                            </items>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="editnumstyle">
+                            <property name="label" translatable="yes" context="numparapage|editnumstyle">Edit Style</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
                       </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="editnumstyle">
-                        <property name="label" translatable="yes" context="numparapage|editnumstyle">Edit Style</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
@@ -206,13 +206,11 @@
                   <object class="GtkBox" id="boxNEW_START">
                     <property name="sensitive">False</property>
                     <property name="can_focus">False</property>
-                    <property name="hexpand">True</property>
                     <property name="spacing">12</property>
                     <child>
                       <object class="GtkBox" id="box4">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="hexpand">True</property>
                         <property name="orientation">vertical</property>
                         <child>
                           <object class="GtkCheckButton" id="checkCB_NUMBER_NEW_START">
@@ -246,8 +244,6 @@
                       <object class="GtkSpinButton" id="spinNF_NEW_START">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="halign">start</property>
-                        <property name="hexpand">True</property>
                         <property name="activates_default">True</property>
                         <property name="adjustment">adjustmentSTART_WITH</property>
                       </object>
@@ -289,21 +285,18 @@
       <object class="GtkFrame" id="frameFL_COUNT_PARA">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="hexpand">True</property>
         <property name="label_xalign">0</property>
         <property name="shadow_type">none</property>
         <child>
           <object class="GtkAlignment" id="alignment3">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="hexpand">True</property>
             <property name="top_padding">6</property>
             <property name="left_padding">12</property>
             <child>
               <object class="GtkBox" id="box1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="hexpand">True</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
                 <child>
@@ -347,13 +340,11 @@
                     <property name="visible">True</property>
                     <property name="sensitive">False</property>
                     <property name="can_focus">False</property>
-                    <property name="hexpand">True</property>
                     <property name="spacing">12</property>
                     <child>
                       <object class="GtkBox" id="box3">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="hexpand">True</property>
                         <property name="orientation">vertical</property>
                         <child>
                           <object class="GtkLabel" id="labelFT_RESTART_NO">
@@ -383,8 +374,6 @@
                       <object class="GtkSpinButton" id="spinNF_RESTART_PARA">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="halign">start</property>
-                        <property name="hexpand">True</property>
                         <property name="activates_default">True</property>
                         <property name="adjustment">adjustmentNF_RESTART_PARA</property>
                       </object>
@@ -423,14 +412,6 @@
       </packing>
     </child>
   </object>
-  <object class="GtkSizeGroup" id="sizegroup1">
-    <widgets>
-      <widget name="comboLB_OUTLINE_LEVEL"/>
-      <widget name="comboLB_NUMBER_STYLE"/>
-      <widget name="spinNF_NEW_START"/>
-      <widget name="spinNF_RESTART_PARA"/>
-    </widgets>
-  </object>
   <object class="GtkSizeGroup" id="sizegroup2">
     <widgets>
       <widget name="labelFT_OUTLINE_LEVEL"/>
@@ -439,4 +420,18 @@
       <widget name="box3"/>
     </widgets>
   </object>
+  <object class="GtkSizeGroup" id="sizegroup3">
+    <widgets>
+      <widget name="comboLB_OUTLINE_LEVEL"/>
+      <widget name="boxSubNumber_Style"/>
+    </widgets>
+  </object>
+  <object class="GtkSizeGroup" id="sizegroup4">
+    <widgets>
+      <widget name="comboLB_NUMBER_STYLE"/>
+      <widget name="spinNF_NEW_START"/>
+      <widget name="spinNF_RESTART_PARA"/>
+    </widgets>
+  </object>
+  <object class="GtkSizeGroup" id="sizegroup1"/>
 </interface>
