tdf#128239 Paragraph Dialog: Update Alignment tab
Change-Id: Ia2649902e4ad8c2990ffef5fd0c22df32484fcd7
Reviewed-on: https://gerrit.libreoffice.org/81113
Tested-by: Jenkins
Reviewed-by: andreas_kainz <kainz.a@gmail.com>

--- a/cui/uiconfig/ui/paragalignpage.ui
+++ b/cui/uiconfig/ui/paragalignpage.ui
@@ -440,4 +440,10 @@
       <widget name="label2"/>
     </widgets>
   </object>
+  <object class="GtkSizeGroup" id="sizegroup2">
+    <widgets>
+      <widget name="comboLB_VERTALIGN"/>
+      <widget name="comboLB_TEXTDIRECTION"/>
+    </widgets>
+  </object>
 </interface>
