tdf#127773 AutoCorrect Dialog Wordcomplete Tab sizegroup fix
Change-Id: Iae6958172a5f7943cc5032845a29d258c3ffd79f
Reviewed-on: https://gerrit.libreoffice.org/81189
Tested-by: Jenkins
Reviewed-by: andreas_kainz <kainz.a@gmail.com>

--- a/cui/uiconfig/ui/wordcompletionpage.ui
+++ b/cui/uiconfig/ui/wordcompletionpage.ui
@@ -376,8 +376,9 @@
   </object>
   <object class="GtkSizeGroup" id="sizegroup1">
     <widgets>
-      <widget name="maxentries"/>
       <widget name="minwordlen"/>
+      <widget name="maxentries"/>
+      <widget name="acceptwith"/>
     </widgets>
   </object>
 </interface>
