Resolves: tdf#128130 enable mnemonics in pivot table expanders
Change-Id: Ia3196252a7399b4069fff0c2f82fb96fecd6fccc
Reviewed-on: https://gerrit.libreoffice.org/81383
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sc/uiconfig/scalc/ui/pivottablelayoutdialog.ui
+++ b/sc/uiconfig/scalc/ui/pivottablelayoutdialog.ui
@@ -669,6 +669,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes" context="pivottablelayoutdialog|label11">Options</property>
+                    <property name="use_underline">True</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -934,6 +935,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes" context="pivottablelayoutdialog|label7">Source and Destination</property>
+                    <property name="use_underline">True</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
