xmloff: create XMLDrawMetaExportOasis instances with an uno constructor
See tdf#74608 for motivation.

Change-Id: I6dc4fcd75517c137c1bd4de766f67b73eaff1788
Reviewed-on: https://gerrit.libreoffice.org/81480
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>

--- a/xmloff/util/xo.component
+++ b/xmloff/util/xo.component
@@ -74,7 +74,8 @@
     constructor="com_sun_star_comp_Draw_XMLMetaExporter_get_implementation">
     <service name="com.sun.star.comp.Draw.XMLMetaExporter"/>
   </implementation>
-  <implementation name="XMLDrawMetaExportOasis">
+  <implementation name="XMLDrawMetaExportOasis"
+    constructor="com_sun_star_comp_Draw_XMLOasisMetaExporter_get_implementation">
     <service name="com.sun.star.comp.Draw.XMLOasisMetaExporter"/>
   </implementation>
   <implementation name="XMLDrawSettingsExportOOO"
