tdf#127994 stabilize tip of the day width
Change-Id: I26bdb7bc3fc7ad2037438f4fceba51388e4121eb
Reviewed-on: https://gerrit.libreoffice.org/81685
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

--- a/cui/uiconfig/ui/tipofthedaydialog.ui
+++ b/cui/uiconfig/ui/tipofthedaydialog.ui
@@ -136,11 +136,11 @@
                 </child>
                 <child>
                   <object class="GtkLabel" id="lbText">
-                    <property name="width_request">350</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="vexpand">True</property>
                     <property name="wrap">True</property>
+                    <property name="width_chars">50</property>
                     <property name="max_width_chars">50</property>
                   </object>
                   <packing>
