--- a/cui/uiconfig/ui/pageformatpage.ui
+++ b/cui/uiconfig/ui/pageformatpage.ui
@@ -517,11 +517,11 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label4">
+                      <object class="GtkLabel" id="labelPageNumbers">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="hexpand">True</property>
-                        <property name="label" translatable="yes" context="pageformatpage|label4">Page numbers:</property>
+                        <property name="label" translatable="yes" context="pageformatpage|labelPageNumbers">Page numbers:</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">comboLayoutFormat</property>
                         <property name="xalign">0</property>
@@ -753,7 +753,7 @@ Do you still want to apply these settings?</property>
     <widgets>
       <widget name="labelPaperTray"/>
       <widget name="labelPageLayout"/>
-      <widget name="label4"/>
+      <widget name="labelPageNumbers"/>
       <widget name="labelTblAlign"/>
     </widgets>
   </object>
